--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "echarts": "^3.5.2",
-    "element-ui": "^1.2.8",
+    "element-ui": "^1.3.6",
     "qs": "^6.4.0",
     "ramda": "^0.23.0",
     "vue": "^2.2.2",
@@ -56,10 +56,14 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "node-sass": "^4.5.2",
+    "openseadragon": "^2.3.0",
+    "openseadragon-annotations": "^1.0.5",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
@@ -79,9 +83,7 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3"
+    "webpack-merge": "^2.6.1"
   },
   "engines": {
     "node": ">= 4.0.0",
